Fix footer on mobile

--- a/include/css/footer.css
+++ b/include/css/footer.css
@@ -194,6 +194,6 @@ footer ul li a{
   }
 
   footer div#largeFooterMenu {
-    //display: none;
+    display: none;
   }
 }
